        output formatting.
  \item The \code{\%\%} and \code{\%/\%} operators are now faster when 
        their operands are real vectors that contain integer values.
  \item Subscripting with a logical vector is now faster for long vectors.
  \item The \code{grep}, \code{grepl}, \code{sub}, and \code{gsub} functions
        have been speeded up, substantially in some situations.
  \item General interpretive overhead has been reduced in some contexts,
        particularly when extracting or replacing subsets with 
        \code{[.]} or \code{[[.]]}.
  }}

  \subsection{FEATURE CHANGES}{
  \itemize{
  \item The \code{along}, \code{across}, and \code{down} forms of 
        the \code{for} statement (introduced in pqR-2016-06-24 and
        pqR-2016-10-05) now set the loop variable(s) to the
        corresponding length or dimension size when the loop is done
        zero times, rather than to \code{NULL}.
  \item Previously, when a scalar was extracted from a matrix or array 
        with \code{[]}, a name derived from a dimension name was attached
        to it only if a single dimension had names (though this was not 
        correctly documented by \code{help("[")}, and is not correctly
        documented in R Core versions to at least R-3.5.0).  This behaviour has
        been changed in pqR so that a name is attached when two dimensions
        have names provided one of these dimensions had dropping suppressed.
        This gives reliable results when matrices happen to have only one
        row or column, as illustrated by the last example in \code{help("[")}.
  \item When \code{unlist} is applied to an atomic vector, names are now removed
        if \code{use.names} is \code{FALSE} (not the default).
  \item When the \code{unlist} and \code{c} functions create names for their
        result, the situations in which a sequence number is appended to a 
        name are now the same for atomic vectors and lists.  For example, 